--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -1,22 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@android:color/white"
-    android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:layout_marginTop="5dp"
+    android:gravity="center"
+
+
+    >
+
+    <FrameLayout
+        android:layout_width="172dp"
+        android:layout_height="136dp"
+        android:background="@color/gray"
+        >
 
     <ImageView
-        android:id="@+id/img"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:id="@+id/image_1"
+        android:layout_width="172dp"
+        android:layout_height="136dp"
         android:adjustViewBounds="true"
-        android:scaleType="fitXY" />
+        android:scaleType="fitXY"
+        android:background="@drawable/ten"
+        />
 
-    <TextView
-        android:id="@+id/img_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="8dp" />
+        <TextView
+            android:id="@+id/img_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="8dp"
+            android:text="가나다라마바사아챀타파"
+            android:textColor="@color/white"
+            android:layout_gravity="center_horizontal|bottom" />
+
+        <ImageButton
+
+            android:id="@+id/bookmark"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            android:layout_marginRight="7dp"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/bookmark_normal"
+            android:layout_gravity="right|top" />
+
+    </FrameLayout>
+
+
+
+
+
 
 </LinearLayout>
