--- a/app/src/main/res/layout/modelhouse_frag.xml
+++ b/app/src/main/res/layout/modelhouse_frag.xml
@@ -4,6 +4,10 @@
     android:id="@+id/quickreturn_coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:layout_gravity="center"
+
+    android:background="@color/gray"
     android:orientation="vertical">
 
 
@@ -58,18 +62,19 @@
 
     </RelativeLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
 
-        >
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/masonry_grid"
+        <android.support.v4.widget.SwipeRefreshLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+            android:layout_height="wrap_content"
+            >
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/masonry_grid"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        </android.support.v4.widget.SwipeRefreshLayout>
 
-    </LinearLayout>
+
 
 
 
