--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -28,6 +28,8 @@
             android:id="@+id/tabanim_tabs"
             android:layout_width="match_parent"
             android:layout_height="37dp"
+            app:tabGravity="fill"
+            app:tabMode="fixed"
 
             />
 
