--- a/app/src/main/res/layout/group_reg_list_row.xml
+++ b/app/src/main/res/layout/group_reg_list_row.xml
@@ -23,6 +23,7 @@
             android:text="테스트테스트"
             android:layout_marginLeft="10dp"
             android:textSize="20dp"
+            android:id="@+id/group_list_tv"
 
             />
 
