--- a/app/src/main/res/layout/sub_toolbar.xml
+++ b/app/src/main/res/layout/sub_toolbar.xml
@@ -40,6 +40,7 @@
             android:layout_toRightOf="@+id/textView2"
             android:layout_toEndOf="@+id/textView2"
             android:layout_marginLeft="14dp"
+            android:id="@+id/map_btn"
             android:background="@drawable/layout_map_btn"
             />
         <Spinner
