--- a/app/src/main/res/layout/message_content.xml
+++ b/app/src/main/res/layout/message_content.xml
@@ -21,7 +21,7 @@
             android:text="테스트"
             android:textColor="#6c6c6d"
             android:layout_gravity="center"
-
+            android:id="@+id/message_content_tv"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="18dp"
             android:layout_marginBottom="18dp"
@@ -39,6 +39,7 @@
                 android:background="@drawable/f_plus_btn"
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="10dp"
+                android:id="@+id/message_groupadd_bt"
 
                 />
 
@@ -53,7 +54,7 @@
         android:layout_width="360dp"
         android:layout_height="1dp"
         android:background="#adacac"
-        android:layout_gravity="center_vertical"
+        android:layout_gravity="center"
         ></View>
     
     
@@ -67,6 +68,7 @@
         android:padding="10dp"
         android:gravity="top"
         android:textSize="14dp"
+        android:id="@+id/message_content_et"
         >
 
 
@@ -83,7 +85,7 @@
         android:text="보내기"
         android:textColor="#fff5f3"
         android:textSize="17dp"
-        android:id="@+id/inquiry_Bt"
+        android:id="@+id/message_content_bt"
         android:layout_gravity="center" />
 
 
