search 화면 변경된 기획으로 적용 및 상세페이지 mgm 바로가기 모델하우스 바로가기 버튼 크기 변경

--- a/app/src/main/res/layout/group_reg_list_row.xml
+++ b/app/src/main/res/layout/group_reg_list_row.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="39dp"
+    android:descendantFocusability="blocksDescendants"
 
     >
     <LinearLayout
@@ -15,6 +16,8 @@
             android:layout_height="22dp"
             android:layout_marginLeft="15dp"
             android:background="@drawable/c1_move_btn"
+
+
             />
 
         <TextView
@@ -41,6 +44,8 @@
             android:layout_marginRight="9dp"
             android:background="@drawable/c1_edit_btn"
             android:id="@+id/reg_bt"
+
+
             />
 
         <Button
@@ -49,6 +54,8 @@
             android:layout_marginRight="15dp"
             android:background="@drawable/c1_delete_btn"
             android:id="@+id/del_bt"
+
+
             />
 
 
