--- a/app/src/main/res/layout/group_reg_list.xml
+++ b/app/src/main/res/layout/group_reg_list.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:descendantFocusability="blocksDescendants"
+    >
 
     <include layout="@layout/login_actionbar"></include>
 
@@ -49,7 +51,7 @@
             android:text="그룹추가"
             android:textColor="#fff5f3"
             android:textSize="17dp"
-            android:id="@+id/inquiry_Bt"
+            android:id="@+id/group_add_bt"
             android:layout_gravity="center|bottom"
             android:layout_marginBottom="20dp"
             />
