--- a/app/src/main/res/layout/inquiry.xml
+++ b/app/src/main/res/layout/inquiry.xml
@@ -173,6 +173,7 @@
             android:text="문의하기"
             android:textColor="#ffffff"
             android:textSize="16dp"
+            android:id="@+id/inquiry_Bt"
             />
 
 
