--- a/app/src/main/res/layout/map_search_activity.xml
+++ b/app/src/main/res/layout/map_search_activity.xml
@@ -5,8 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     >
-
-    <include layout="@layout/main_search_actionbar">
+    <include layout="@layout/search_actionbar">
         
     </include>
 
@@ -14,10 +13,10 @@
     <android.support.design.widget.TabLayout
         android:layout_width="match_parent"
         android:layout_height="37dp"
-        app:tabGravity="center"
+        app:tabGravity="fill"
         app:tabMode="fixed"
         android:id="@+id/main_search_tab"
-        style="@style/MainSearchTabLayout"
+        style="@style/MapSearchTabLayout"
         >
     </android.support.design.widget.TabLayout>
 
