--- a/app/src/main/res/layout/mgm_deatail.xml
+++ b/app/src/main/res/layout/mgm_deatail.xml
@@ -961,15 +961,15 @@
 
 
                 <ImageButton
-                    android:layout_width="52dp"
-                    android:layout_height="52dp"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
                     android:layout_gravity="right"
                     android:layout_marginTop="43dp"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"
                     android:layout_marginRight="14dp"
                     android:scaleType="fitXY"
-                    android:background="@drawable/mgm_link_btn"
+                    android:background="@drawable/modelhouse_link_btn"
                     android:id="@+id/imageButton3" />
 
 
